cabal-version:      3.6
name:               haskell-interview
version:            0.1.0.0
author:             Dzmitry L.
maintainer:         dima.lenchevskii@gmail.com
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Challenges.Alexa
    Challenges.NestingDepth
    Challenges.UniquePath
    Extensions.GADTs
    Extensions.RankNTypes
    Extensions.THDefinition
    Extensions.THExecution
    Parking.Parking
    Parking.ParkingNat
    Theory.ConcurrentParallel
    Theory.LiftedUnlifted
    Theory.Transformer
    Trees.BinaryTree
    Trees.RadixTree

  build-depends:
    , base              ^>=4.16.4.0
    , mtl
    , template-haskell
    , vector

  hs-source-dirs:   src
  default-language: Haskell2010

executable haskell-interview
  main-is:          Main.hs
  build-depends:
    , base               ^>=4.16.4.0
    , haskell-interview

  hs-source-dirs:   app
  default-language: Haskell2010

test-suite haskell-interview-tests
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests src
  main-is:          THExample.hs
  build-depends:    base ^>=4.16.4.0
