cabal-version:      3.6
name:               haskell-interview
version:            0.1.0.0
author:             Dzmitry L.
maintainer:         dima.lenchevskii@gmail.com
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Challenges.Alexa
    Challenges.BinarySearch
    Challenges.Counter
    Challenges.Median
    Challenges.NestingDepth
    Challenges.QuickSort
    Challenges.TernarySearch
    Challenges.Triplets
    Challenges.UniquePath
    Codewars.HighestScoringWord
    Codewars.Kyu6.BreakCamelCase
    Codewars.Kyu6.Difference
    Codewars.Kyu6.MultiplesOf3And5
    Codewars.Kyu6.ReplaceWithAlphabetPosition
    Codewars.Kyu6.SortOddNumbers
    Codewars.Kyu7.DescendingOrder
    Codewars.Kyu7.OddOrEven
    Codewars.Kyu7.PerfectSquare
    Dynamic.Knapsack
    EncryptionProtocol.DiffieHellman
    Extensions.GADTs
    Extensions.RankNTypes
    Extensions.THDefinition
    Extensions.THExecution
    Parking.Parking
    Parking.ParkingNat
    Theory.ConcurrentParallel
    Theory.LiftedUnlifted
    Theory.Transformer
    Trees.BinaryTree
    Trees.RadixTree

  build-depends:
    , base              ^>=4.16.4.0
    , containers
    , mtl
    , suffixtree
    , template-haskell
    , vector

  hs-source-dirs:   src
  default-language: Haskell2010

executable haskell-interview
  main-is:          Main.hs
  build-depends:
    , base               ^>=4.16.4.0
    , haskell-interview

  hs-source-dirs:   app
  default-language: Haskell2010

test-suite haskell-interview-tests
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests src
  main-is:          THExample.hs
  build-depends:    base ^>=4.16.4.0
